force-app/main/default/objects/Delivery_Information__c/Delivery_Information__c.object-meta.xml
<CustomObject>
    <label>Delivery Information</label>
    <nameField>
        <label>Delivery Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>