force-app/main/default/objects/Delivery_Information__c/fields/Delivery_on__c.field-meta.xml
<CustomField>
    <fullName>Delivery_on__c</fullName>
    <label>Delivery on</label>
    <type>Date</type>
</CustomField>