force-app/main/default/objects/Delivery_Information__c/fields/Transporter__c.field-meta.xml
<CustomField>
    <fullName>Transporter__c</fullName>
    <label>Transporter</label>
    <referenceTo>Transporter__c</referenceTo>
    <relationshipLabel>Delivery informations</relationshipLabel>
    <relationshipName>Delivery_informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>